--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -10,7 +10,8 @@ extra-source-files:  rtmidi/rtmidi_c.h
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Sound.RtMidi
+  extensions:          ForeignFunctionInterface
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.9 && <4.10
@@ -19,4 +20,4 @@ library
   cc-options:          -D__LINUX_ALSA__ 
   c-sources:           rtmidi/RtMidi.cpp
                        rtmidi/rtmidi_c.cpp
-  extra-libraries:     asound pthread
+  extra-libraries:     asound pthread stdc++
