--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -18,8 +18,14 @@ library
                        rtmidi/rtmidi_c.cpp
   extra-libraries:     asound pthread stdc++
 
-executable example
-  main-is:             example.hs
+executable example-playback
+  main-is:             examples/playback.hs
+  build-depends:       base >=4.9 && <4.10
+                     , RtMidi
+  default-language:    Haskell2010
+
+executable example-query
+  main-is:             examples/query.hs
   build-depends:       base >=4.9 && <4.10
                      , RtMidi
   default-language:    Haskell2010
