--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -30,6 +30,12 @@ executable example-query
                      , RtMidi
   default-language:    Haskell2010
 
+executable example-callback
+  main-is:             examples/callback.hs
+  build-depends:       base >=4.9 && <4.10
+                     , RtMidi
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/riottracker/RtMidi
