--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -9,9 +9,10 @@ homepage:            https://github.com/riottracker/RtMidi
 maintainer:          kohlrabi@kohlra.biz
 extra-source-files:  rtmidi/rtmidi_c.h
                      rtmidi/RtMidi.h
-                     examples/playback.hs
-                     examples/query.hs
                      examples/callback.hs
+                     examples/playback.hs
+                     examples/poll.hs
+                     examples/query.hs
 cabal-version:       >=1.10
 license:             MIT
 
@@ -39,6 +40,7 @@ Flag core {
 
 library
   exposed-modules:     Sound.RtMidi
+  other-modules:       Sound.RtMidi.Foreign
   build-depends:       base >=4.9 && <4.15
   default-language:    Haskell2010
   include-dirs:        rtmidi
