Fix options in OSX build

--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -56,6 +56,12 @@ library
   if flag(core) && os(darwin)
     cc-options:       -D__MACOSX_CORE__
     frameworks:       CoreMIDI CoreAudio CoreFoundation
+    -- NOTE(ejconlon) This is to make the c ffi wrapper actually catch
+    -- the c++ exceptions instead of simply aborting.
+    -- Cribbed from https://github.com/fpco/inline-c/pull/89
+    -- avoid https://gitlab.haskell.org/ghc/ghc/issues/11829
+    ld-options:        -Wl,-keep_dwarf_unwind
+    ghc-options:       -pgmc=clang++
   -- TODO(ejconlon) Add windows support
 
 executable rtmidi-callback
@@ -65,6 +71,7 @@ executable rtmidi-callback
       base
     , RtMidi
   default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
 
 executable rtmidi-playback
   main-is:            playback.hs
@@ -73,6 +80,7 @@ executable rtmidi-playback
       base
     , RtMidi
   default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
 
 executable rtmidi-poll
   main-is:            poll.hs
@@ -81,6 +89,7 @@ executable rtmidi-poll
       base
     , RtMidi
   default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
 
 executable rtmidi-query
   main-is:            query.hs
@@ -89,6 +98,7 @@ executable rtmidi-query
       base
     , RtMidi
   default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
 
 source-repository head
   type:     git
