--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,13 @@ parameters:
     type: string
     default: "v1"
 
+commands:
+  install_native_deps:
+    steps:
+    - run:
+      name: Install apt
+      command: "apt-get update && apt-get install -y $(cat docker/packages.txt)"
+
 jobs:
   stack_build:
     parameters:
@@ -16,6 +23,7 @@ jobs:
     docker:
       - image: haskell:<< parameters.lts_ghc_ver >>
     steps:
+      - install_native_deps
       - checkout
       - restore_cache:
           name: Restore cached dependencies
@@ -23,7 +31,7 @@ jobs:
             - stack-<< pipeline.parameters.cache_ver >>-{{ checksum "stack.yaml" }}-{{ checksum "<< pipeline.parameters.project >>.cabal" }}
       - run:
           name: Run tests
-          command: stack test
+          command: stack test --flag RtMidi:jack
       - save_cache:
           name: Cache dependencies
           key: stack-<< pipeline.parameters.cache_ver >>-{{ checksum "stack.yaml" }}-{{ checksum "<< pipeline.parameters.project >>.cabal" }}
@@ -37,6 +45,7 @@ jobs:
     docker:
       - image: haskell:<< parameters.ghc_ver >>
     steps:
+      - install_native_deps
       - checkout
       - restore_cache:
           name: Restore cached dependencies
@@ -47,7 +56,7 @@ jobs:
           command: cabal update
       - run:
           name: Build project
-          command: cabal build
+          command: cabal build -fjack
       - run:
           name: Run tests
           command: cabal test
