--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -44,6 +44,7 @@ library
   exposed-modules:     Sound.RtMidi
   other-modules:       Sound.RtMidi.Foreign
   build-depends:       base >=4.9 && <4.15
+                     , unliftio-core >= 0.1.2.0 && < 1
   default-language:    Haskell2010
   include-dirs:        rtmidi
   extra-libraries:     stdc++
@@ -99,6 +100,18 @@ executable rtmidi-query
   build-depends:
       base
     , RtMidi
+  default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
+
+test-suite rtmidi-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: test
+  build-depends:
+      base
+    , RtMidi
+    , tasty >= 1.2.3 && < 2
+    , tasty-hunit >= 0.10.0.2 && < 1
   default-language:   Haskell2010
   ghc-options: -threaded -rtsopts
 
