Fix jack configuration

--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -28,18 +28,6 @@ Flag jack {
   Default:      False
 }
 
-Flag core {
-  Description:  Enable CoreMIDI api
-  Default:      True
-}
-
--- TODO(ejconlon) Add windows support
--- Flag mm {
---   Description:  Enable Windows Multimedia Library api
---   Default:      False
--- }
-
-
 library
   exposed-modules:     Sound.RtMidi
   other-modules:       Sound.RtMidi.Foreign
@@ -50,13 +38,21 @@ library
   extra-libraries:     stdc++
   c-sources:           rtmidi/RtMidi.cpp
                        rtmidi/rtmidi_c.cpp
-  if flag(alsa) && os(linux)
-    cc-options:       -D__LINUX_ALSA__
-    extra-libraries:  asound pthread
-  if flag(jack) && (os(linux) || os(darwin))
-    cc-options:       -D__UNIX_JACK__
-    extra-libraries:  jack
-  if flag(core) && os(darwin)
+
+  -- TODO(ejconlon) Add windows support
+
+  if os(linux)
+    if flag(alsa) && flag(jack)
+      cc-options:       -D__LINUX_ALSA__ -D__UNIX_JACK__
+      extra-libraries:  asound pthread jack
+    if flag(alsa) && !flag(jack)
+      cc-options:       -D__LINUX_ALSA__
+      extra-libraries:  asound pthread
+    if !flag(alsa) && flag(jack)
+      cc-options:       -D__UNIX_JACK__
+      extra-libraries:  jack
+
+  if os(darwin)
     cc-options:       -D__MACOSX_CORE__
     frameworks:       CoreMIDI CoreAudio CoreFoundation
     -- NOTE(ejconlon) This is to make the c ffi wrapper actually catch
@@ -65,7 +61,6 @@ library
     -- avoid https://gitlab.haskell.org/ghc/ghc/issues/11829
     ld-options:        -Wl,-keep_dwarf_unwind
     ghc-options:       -pgmc=clang++
-  -- TODO(ejconlon) Add windows support
 
 executable rtmidi-callback
   main-is:            callback.hs
