Fix jack configuration (#11)

--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -19,26 +19,14 @@ cabal-version:       >=1.10
 license:             MIT
 
 Flag alsa {
-  Description:  Enable ALSA sequencer api
+  Description:  Enable ALSA sequencer api on Linux
   Default:      True
 }
 
 Flag jack {
-  Description:  Enable JACK api
+  Description:  Enable JACK api on Linux or OSX
   Default:      False
 }
-
-Flag core {
-  Description:  Enable CoreMIDI api
-  Default:      True
-}
-
--- TODO(ejconlon) Add windows support
--- Flag mm {
---   Description:  Enable Windows Multimedia Library api
---   Default:      False
--- }
-
 
 library
   exposed-modules:     Sound.RtMidi
@@ -50,14 +38,26 @@ library
   extra-libraries:     stdc++
   c-sources:           rtmidi/RtMidi.cpp
                        rtmidi/rtmidi_c.cpp
-  if flag(alsa) && os(linux)
-    cc-options:       -D__LINUX_ALSA__
-    extra-libraries:  asound pthread
-  if flag(jack) && (os(linux) || os(darwin))
-    cc-options:       -D__UNIX_JACK__
-    extra-libraries:  jack
-  if flag(core) && os(darwin)
-    cc-options:       -D__MACOSX_CORE__
+
+  -- TODO(ejconlon) Add windows support
+
+  if os(linux)
+    if flag(alsa) && flag(jack)
+      cc-options:       -D__LINUX_ALSA__ -D__UNIX_JACK__
+      extra-libraries:  asound pthread jack
+    if flag(alsa) && !flag(jack)
+      cc-options:       -D__LINUX_ALSA__
+      extra-libraries:  asound pthread
+    if !flag(alsa) && flag(jack)
+      cc-options:       -D__UNIX_JACK__
+      extra-libraries:  jack
+
+  if os(darwin)
+    if flag(jack)
+      cc-options:       -D__MACOSX_CORE__ -D__UNIX_JACK__
+      extra-libraries:  jack
+    else
+      cc-options:       -D__MACOSX_CORE__
     frameworks:       CoreMIDI CoreAudio CoreFoundation
     -- NOTE(ejconlon) This is to make the c ffi wrapper actually catch
     -- the c++ exceptions instead of simply aborting.
@@ -65,7 +65,6 @@ library
     -- avoid https://gitlab.haskell.org/ghc/ghc/issues/11829
     ld-options:        -Wl,-keep_dwarf_unwind
     ghc-options:       -pgmc=clang++
-  -- TODO(ejconlon) Add windows support
 
 executable rtmidi-callback
   main-is:            callback.hs
