--- a/RtMidi.cabal
+++ b/RtMidi.cabal
@@ -1,5 +1,5 @@
 name:                RtMidi
-version:             0.3.0.0
+version:             0.4.0.0
 synopsis:            Haskell wrapper for RtMidi, the lightweight, cross-platform MIDI I/O library.
 description:         Please see the README on GitHub at <https://github.com/riottracker/RtMidi#readme>
 category:            Sound
@@ -30,10 +30,15 @@ Flag jack {
 
 library
   exposed-modules:     Sound.RtMidi
+                     , Sound.RtMidi.Report
   other-modules:       Sound.RtMidi.Foreign
   build-depends:       base >=4.9 && <4.15
+                     , deepseq >= 1.4.4.0 && < 2
                      , unliftio-core >= 0.1.2.0 && < 1
   default-language:    Haskell2010
+  default-extensions:  DeriveGeneric
+                     , DerivingStrategies
+                     , GeneralizedNewtypeDeriving
   include-dirs:        rtmidi
   extra-libraries:     stdc++
   c-sources:           rtmidi/RtMidi.cpp
@@ -99,6 +104,16 @@ executable rtmidi-query
   build-depends:
       base
     , RtMidi
+  default-language:   Haskell2010
+  ghc-options: -threaded -rtsopts
+
+executable rtmidi-report
+  main-is:            report.hs
+  hs-source-dirs:     examples
+  build-depends:
+      base
+    , RtMidi
+    , pretty-simple >= 3.2.3.0 && < 4
   default-language:   Haskell2010
   ghc-options: -threaded -rtsopts
 
